# rust-btc

./: .envrc  .gitignore  Cargo.toml  README.org  rust-toolchain.toml
.nix/: flake.nix
src/hello_world/: Cargo.toml
src/hello_world/src/: main.rs
src/lib/: Cargo.toml
src/lib/src/: crypto.rs  lib.rs  network.rs  sha256.rs  signkey_serde.rs  util.rs
src/lib/src/types/: block.rs  blockchain.rs  transaction.rs
src/miner/: Cargo.toml
src/miner/src/: main.rs
